@@ -48,6 +48,7 @@
 static SEXP NaokSymbol = NULL;
 static SEXP DupSymbol = NULL;
 static SEXP PkgSymbol = NULL;
+static SEXP EncSymbol = NULL;
 
 /* Global variable that should go. Should actually be doing this in
    a much more straightforward manner. */
@@ -74,6 +75,7 @@ static DL_FUNC R_FindNativeSymbolFromDLL(char *name, DllReference *dll, R_Regist
 
 static SEXP naokfind(SEXP args, int *len, int *naok, int *dup, DllReference *dll);
 static SEXP pkgtrim(SEXP args, DllReference *dll);
+static SEXP enctrim(SEXP args, char *name, int len);
 
 /*
   Checks whether the specified object correctly identifies a native routine.
@@ -204,8 +206,12 @@ static Rboolean checkNativeType(int targetType, int actualType)
     return (TRUE);
 }
 
+#ifdef HAVE_ICONV_H
+#include <iconv.h>
+#endif
+
 static void *RObjToCPtr(SEXP s, int naok, int dup, int narg, int Fort, const char *name, R_toCConverter **converter,
-                        int targetType)
+                        int targetType, char *encname)
 {
     int *iptr;
     float *sptr;
@@ -327,11 +333,47 @@ static void *RObjToCPtr(SEXP s, int naok, int dup, int narg, int Fort, const cha
         else
         {
             cptr = (char **)R_alloc(n, sizeof(char *));
-            for (i = 0; i < n; i++)
+            if (strlen(encname))
             {
-                l = strlen(CHAR(STRING_ELT(s, i)));
-                cptr[i] = (char *)R_alloc(l + 1, sizeof(char));
-                strcpy(cptr[i], CHAR(STRING_ELT(s, i)));
+#ifdef HAVE_ICONV
+                char *inbuf, *outbuf;
+                size_t inb, outb, outb0, res;
+                iconv_t obj = Riconv_open("", encname); /* (to, from) */
+                if (obj == (iconv_t)(-1))
+                    error("unsupported encoding '%s'", encname);
+                for (i = 0; i < n; i++)
+                {
+                    inbuf = CHAR(STRING_ELT(s, i));
+                    inb = strlen(inbuf);
+                    outb0 = 3 * inb;
+                restart_in:
+                    cptr[i] = outbuf = (char *)R_alloc(outb0 + 1, sizeof(char));
+                    outb = 3 * inb;
+                    Riconv(obj, NULL, NULL, &outbuf, &outb);
+                    res = Riconv(obj, &inbuf, &inb, &outbuf, &outb);
+                    if (res == -1 && errno == E2BIG)
+                    {
+                        outb0 *= 3;
+                        goto restart_in;
+                    }
+                    if (res == -1)
+                        error("conversion problem in re-encoding to '%s'", encname);
+                    *outbuf = '\0';
+                }
+                Riconv_close(obj);
+            }
+            else
+#else
+                warning("re-encoding is not supported on this system");
+            }
+#endif
+            {
+                for (i = 0; i < n; i++)
+                {
+                    l = strlen(CHAR(STRING_ELT(s, i)));
+                    cptr[i] = (char *)R_alloc(l + 1, sizeof(char));
+                    strcpy(cptr[i], CHAR(STRING_ELT(s, i)));
+                }
             }
             return (void *)cptr;
         }
@@ -369,7 +411,7 @@ static void *RObjToCPtr(SEXP s, int naok, int dup, int narg, int Fort, const cha
     }
 }
 
-static SEXP CPtrToRObj(void *p, SEXP arg, int Fort, R_NativePrimitiveArgType type)
+static SEXP CPtrToRObj(void *p, SEXP arg, int Fort, R_NativePrimitiveArgType type, char *encname)
 {
     int *iptr, n = length(arg);
     float *sptr;
@@ -427,9 +469,44 @@ static SEXP CPtrToRObj(void *p, SEXP arg, int Fort, R_NativePrimitiveArgType typ
         {
             PROTECT(s = allocVector(type, n));
             cptr = (char **)p;
-            for (i = 0; i < n; i++)
+            if (strlen(encname))
             {
-                SET_STRING_ELT(s, i, mkChar(cptr[i]));
+#ifdef HAVE_ICONV
+                char *inbuf, *outbuf, *p;
+                size_t inb, outb, outb0, res;
+                iconv_t obj = Riconv_open(encname, ""); /* (to, from) */
+                if (obj == (iconv_t)(-1))
+                    error("unsupported encoding '%s'", encname);
+                for (i = 0; i < n; i++)
+                {
+                    inbuf = cptr[i];
+                    inb = strlen(inbuf);
+                    outb0 = 3 * inb;
+                restart_out:
+                    p = outbuf = (char *)R_alloc(outb0 + 1, sizeof(char));
+                    outb = outb0;
+                    Riconv(obj, NULL, NULL, &outbuf, &outb);
+                    res = Riconv(obj, &inbuf, &inb, &outbuf, &outb);
+                    if (res == -1 && errno == E2BIG)
+                    {
+                        outb0 *= 3;
+                        goto restart_out;
+                    }
+                    if (res == -1)
+                        error("conversion problem in re-encoding from '%s'", encname);
+                    *outbuf = '\0';
+                    SET_STRING_ELT(s, i, mkChar(p));
+                }
+                Riconv_close(obj);
+            }
+            else
+#else
+                warning("re-encoding is not supported on this system");
+            }
+#endif
+            {
+                for (i = 0; i < n; i++)
+                    SET_STRING_ELT(s, i, mkChar(cptr[i]));
             }
             UNPROTECT(1);
         }
@@ -594,6 +671,43 @@ static SEXP pkgtrim(SEXP args, DllReference *dll)
                 warning("PACKAGE used more than once");
             setDLLname(ss, dll->DLLname);
             dll->type = FILENAME;
+            SETCDR(s, CDR(ss));
+        }
+        s = CDR(s);
+    }
+    return args;
+}
+
+static SEXP enctrim(SEXP args, char *name, int len)
+{
+    SEXP s, ss, sx;
+    int pkgused = 0;
+
+    strcpy(name, "");
+    for (s = args; s != R_NilValue;)
+    {
+        ss = CDR(s);
+        /* Look for ENCODING=. We look at the next arg, unless
+           this is the last one (which will only happen for one arg),
+           and remove it */
+        if (ss == R_NilValue && TAG(s) == EncSymbol)
+        {
+            sx = CAR(s);
+            if (pkgused++ == 1)
+                warning("ENCODING used more than once");
+            if (TYPEOF(sx) != STRSXP || length(sx) != 1)
+                error("ENCODING argument must be a single character string");
+            strncpy(name, CHAR(STRING_ELT(sx, 0)), len);
+            return R_NilValue;
+        }
+        if (TAG(ss) == EncSymbol)
+        {
+            sx = CAR(ss);
+            if (pkgused++ == 1)
+                warning("ENCODING used more than once");
+            if (TYPEOF(sx) != STRSXP || length(sx) != 1)
+                error("ENCODING argument must be a single character string");
+            strncpy(name, CHAR(STRING_ELT(sx, 0)), len);
             SETCDR(s, CDR(ss));
         }
         s = CDR(s);
@@ -1256,7 +1370,7 @@ SEXP do_dotCode(SEXP call, SEXP op, SEXP args, SEXP env)
     R_RegisteredNativeSymbol symbol = {R_C_SYM, {NULL}, NULL};
     R_NativePrimitiveArgType *checkTypes = NULL;
     R_NativeArgStyle *argStyles = NULL;
-    char *vmax, symName[128];
+    char *vmax, symName[128], encname[101];
 
     if (NaokSymbol == NULL || DupSymbol == NULL || PkgSymbol == NULL)
     {
@@ -1264,11 +1378,14 @@ SEXP do_dotCode(SEXP call, SEXP op, SEXP args, SEXP env)
         DupSymbol = install("DUP");
         PkgSymbol = install("PACKAGE");
     }
+    if (EncSymbol == NULL)
+        EncSymbol = install("ENCODING");
     vmax = vmaxget();
     which = PRIMVAL(op);
     if (which)
         symbol.type = R_FORTRAN_SYM;
 
+    args = enctrim(args, encname, 100);
     args = resolveNativeRoutine(args, &fun, &symbol, symName, &nargs, &naok, &dup, call);
 
     if (symbol.symbol.c && symbol.symbol.c->numArgs > -1)
@@ -1303,7 +1420,7 @@ SEXP do_dotCode(SEXP call, SEXP op, SEXP args, SEXP env)
         }
 #endif
         cargs[nargs] = RObjToCPtr(CAR(pargs), naok, dup, nargs + 1, which, symName, argConverters + nargs,
-                                  checkTypes ? checkTypes[nargs] : 0);
+                                  checkTypes ? checkTypes[nargs] : 0, encname);
         nargs++;
     }
 
@@ -1738,7 +1855,7 @@ SEXP do_dotCode(SEXP call, SEXP op, SEXP args, SEXP env)
             else
             {
                 PROTECT(s = CPtrToRObj(cargs[nargs], CAR(pargs), which,
-                                       checkTypes ? checkTypes[nargs] : TYPEOF(CAR(pargs))));
+                                       checkTypes ? checkTypes[nargs] : TYPEOF(CAR(pargs)), encname));
                 SET_ATTRIB(s, duplicate(ATTRIB(CAR(pargs))));
                 SET_OBJECT(s, OBJECT(CAR(pargs)));
             }
@@ -1884,7 +2001,7 @@ void call_R(char *func, long nargs, void **arguments, char **modes, long *length
     case CPLXSXP:
     case STRSXP:
         if (nres > 0)
-            results[0] = RObjToCPtr(s, 1, 1, 0, 0, (const char *)NULL, NULL, 0);
+            results[0] = RObjToCPtr(s, 1, 1, 0, 0, (const char *)NULL, NULL, 0, "");
         break;
     case VECSXP:
         n = length(s);
@@ -1892,7 +2009,7 @@ void call_R(char *func, long nargs, void **arguments, char **modes, long *length
             n = nres;
         for (i = 0; i < n; i++)
         {
-            results[i] = RObjToCPtr(VECTOR_ELT(s, i), 1, 1, 0, 0, (const char *)NULL, NULL, 0);
+            results[i] = RObjToCPtr(VECTOR_ELT(s, i), 1, 1, 0, 0, (const char *)NULL, NULL, 0, "");
         }
         break;
     case LISTSXP:
@@ -1901,7 +2018,7 @@ void call_R(char *func, long nargs, void **arguments, char **modes, long *length
             n = nres;
         for (i = 0; i < n; i++)
         {
-            results[i] = RObjToCPtr(s, 1, 1, 0, 0, (const char *)NULL, NULL, 0);
+            results[i] = RObjToCPtr(s, 1, 1, 0, 0, (const char *)NULL, NULL, 0, "");
             s = CDR(s);
         }
         break;
